Add back jvm-opts for the dev profile