@@ -18,4 +18,5 @@
   :jar-name "discljord-%s.jar"
   :deploy-branches ["master" "release"]
   :profiles {:dev {:dependencies [[http-kit.fake "0.2.2"]
-                                  [midje "1.9.2"]]}})
+                                  [midje "1.9.2"]]
+                   :jvm-opts ["--add-modules" "java.xml.bind"]}})
